# Cosmic-Time-Weather

./: .gitignore  README.md  install.sh  pyproject.toml  requirements.txt  weather-buddy.desktop
src/: __init__.py  main.py
src/services/: __init__.py  async_utils.py  config.py  weather_api.py
src/ui/: location_card.py  main_window.py  settings_dialog.py
